workspace-sf/force-app/main/default/objects/DadosCorretor__c/DadosCorretor__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar dados dos corretores.</description>
    <label>Dados do corretor</label>
    <nameField>
        <label>Código do corretor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dados dos corretores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>