workspace-sf/force-app/main/default/objects/DadosCorretor__c/fields/Bloqueado__c.field-meta.xml
<CustomField>
    <fullName>Bloqueado__c</fullName>
    <label>Bloqueado</label>
    <length>250</length>
    <type>Text</type>
</CustomField>