workspace-sf/force-app/main/default/objects/DadosCorretor__c/fields/CodigoSucursalDestinoCheque__c.field-meta.xml
<CustomField>
    <fullName>CodigoSucursalDestinoCheque__c</fullName>
    <label>Código sucursal destino cheque</label>
    <type>TextArea</type>
</CustomField>