workspace-sf/force-app/main/default/objects/DadosCorretor__c/fields/CodigoSucursalVinculo__c.field-meta.xml
<CustomField>
    <fullName>CodigoSucursalVinculo__c</fullName>
    <label>Código da sucursal de vínculo</label>
    <type>TextArea</type>
</CustomField>