workspace-sf/force-app/main/default/objects/DadosCorretor__c/fields/NomeCorretor__c.field-meta.xml
<CustomField>
    <fullName>NomeCorretor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nome do corretor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>CodigosCorretores</relationshipName>
    <type>Lookup</type>
</CustomField>