workspace-sf/force-app/main/default/objects/DadosCorretor__c/fields/Produtos_Bloqueados__c.field-meta.xml
<CustomField>
    <fullName>Produtos_Bloqueados__c</fullName>
    <label>Produtos Bloqueados</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BRASIL-OURO</fullName>
                <label>Brasil Ouro</label>
            </value>
            <value>
                <fullName>BRASIL-PRATA</fullName>
                <label>Brasil Prata Ação</label>
            </value>
            <value>
                <fullName>231312s</fullName>
                <label>Brasil Terra</label>
            </value>
            <value>
                <fullName>BRASIL-TERRA</fullName>
                <label>Brasil Terra-OK</label>
            </value>
            <value>
                <fullName>BRBPAR</fullName>
            </value>
            <value>
                <fullName>BRBSER</fullName>
            </value>
            <value>
                <fullName>NP</fullName>
            </value>
            <value>
                <fullName>AMERICA</fullName>
                <label>Plano America</label>
            </value>
            <value>
                <fullName>APTLMKT</fullName>
                <label>Porto Acidentes Pessoais Individual</label>
            </value>
            <value>
                <fullName>VIDA_ON</fullName>
                <label>Porto Vida ON</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>PRODUTO-TESTE VERSIONAMENTO-COMERCIAL1</label>
            </value>
            <value>
                <fullName>testee</fullName>
                <label>Seguro Compra Garantida</label>
            </value>
            <value>
                <fullName>VI-PESSOASS</fullName>
                <label>Seguro de Pessoas Individual.</label>
            </value>
            <value>
                <fullName>VI-PESSOASSSSS2</fullName>
                <label>Seguro de Vida Individual</label>
            </value>
            <value>
                <fullName>VIAGEM-PRATA</fullName>
                <label>Seguro Viagem | Porto Vida ON</label>
            </value>
            <value>
                <fullName>651561</fullName>
                <label>Seguro Viagem Individual_v1</label>
            </value>
            <value>
                <fullName>PLV4291_COM</fullName>
                <label>Teste PLV-4291</label>
            </value>
            <value>
                <fullName>123654</fullName>
                <label>Teste 123</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>