workspace-sf/force-app/main/default/objects/DadosCorretor__c/fields/SucursalDestinoCheque__c.field-meta.xml
<CustomField>
    <fullName>SucursalDestinoCheque__c</fullName>
    <label>Sucursal destino cheque</label>
    <type>TextArea</type>
</CustomField>