workspace-sf/force-app/main/default/objects/DadosCorretor__c/fields/SucursalVinculo__c.field-meta.xml
<CustomField>
    <fullName>SucursalVinculo__c</fullName>
    <label>Sucursal de vínculo</label>
    <type>TextArea</type>
</CustomField>