workspace-sf/force-app/main/default/objects/DadosCorretor__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Produção</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>