workspace-sf/force-app/main/default/objects/DadosCorretor__c/listViews/Corretores_Bloqueados.listView-meta.xml
<ListView>
    <fullName>Corretores_Bloqueados</fullName>
    <columns>NAME</columns>
    <columns>NomeCorretor__c</columns>
    <columns>Produtos_Bloqueados__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Produtos_Bloqueados__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Corretores Bloqueados</label>
</ListView>