workspace-sf/force-app/main/default/objects/DadosCorretor__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>CodigoSucursalVinculo__c</columns>
    <columns>SucursalVinculo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>